--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             <img class="navbar__logo" src="/static/lllogo.jpeg" alt="microblog logo" height="50px" width="60px"/> Microblog
         </div>
         <ul class="navbar__navigation">
-            <li class="navbar__navigation-item"><a href="#" class="navbar__link">Recent</a></li>
+            <li class="navbar__navigation-item"><a href="/" class="navbar__link">Recent</a></li>
             <li class="navbar__navigation-item"><a href="#" class="navbar__link" id="calendar-link">Calendar</a></li>
             <div id="calendar-container" style="display:none;">
                 <input type="text" id="calendar" placeholder="Select a date">
