--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="navbar">
         <div class="navbar__brand">
-            <img class="navbar__logo" src="/static/lllogo.jpeg" alt="microblog logo" height="50px" width="60px"/> Microblog
+            <img class="navbar__logo" src="/static/lllogo.jpeg" alt="microblog logo" height="50px" width="60px"/> Blog-Post
         </div>
         <ul class="navbar__navigation">
             <li class="navbar__navigation-item"><a href="/" class="navbar__link">Recent</a></li>
